# retraining-llm-ml-comparaison

./: .gitignore  README.md
.github/workflows/: release-model.yml
backend/: README.md  pyproject.toml  train_and_export.py
backend/api/: main.py
backend/notebooks/: analysis.ipynb
backend/utils/: constants.py  convert.py  dataframe_utils.py  llm_utils.py  ml_utils.py  run_api.py  sample.py  train_and_export.py
datasets/: links.md
frontend/: README.md  docker-compose.yml  package-lock.json  package.json
frontend/src/: api-client.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/api/claims/: route.ts
frontend/src/app/api/claims/[id]/tag/: route.ts
frontend/src/app/api/llm/: route.ts
frontend/src/app/api/tags/: route.ts
frontend/src/components/: Claim.module.css  Claim.tsx  Inbox.module.css  Inbox.tsx  Inboxes.module.css  Inboxes.tsx  TagSelector.module.css  TagSelector.tsx
frontend/src/constants/: tags.ts
frontend/src/database/: client.ts  queries.ts  seed-data.json  seed.ts
frontend/src/lib/: llm-generation.ts
frontend/src/styles/: Header.module.css  Indicator.module.css
