[project]
name = "backend"
version = "0.1.0"
description = "Project backend and data analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
