[project]
name = "backend"
version = "0.1.0"
description = "Project backend and data analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
]

[project.scripts]
convert = "utils.convert:export_csv_to_feather"
sample = "utils.sample:create_sample"
train_export = "utils.train_and_export:train_and_export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
